# 25Mg

./: README.md
scripts/: CreateBgHists.C  CreateBgHists_C.d  CreateBgHists_linear.C  alphaCut_b0c6.C  alphaCut_b0c6.root  bg0_0.C  bg0_0.bak  bg0_0_quad.C  bg0_c0.C  bg0_c1.C  bg0_c1_quad.C  bg0_c2.C  bg0_c2_quad.C  bg0_c3_quad.C  bg0_c4_quad.C  bg0_c5_quad.C  bg0_c6_quad.C  bg0_c7_quad.C  bg1_c0_quad.C  bg1_c1_quad.C  bg1_c2_quad.C  bg1_c3_quad.C  bg1_c4_quad.C  bg1_c5_quad.C  bg1_c6_quad.C  bg1_c7_quad.C  c0.C  c0.root  c1.root  c2.root  c_2074210_projection_401.C  calibratedBackgroundHists.root  my_output.root  parseResults.py  parseResults.py.org  parseinfo.py  plot2.C  psdB0C6.C  psdB0C6_C.d  test.py
scripts_new/: alpha_cut.C  alpha_cut_background.C  extractSpectra.C  extractSpectra_background  extractSpectra_background.C  extractSpectra_corrected.C  extractSpectra_new.C  mg25Yields.C  mg25Yields_new.C  run.root  spectra.root  testing.C
scripts_new/calibration/: fitFunctions.h  gainMatch.h
source/: CMakeLists.txt  Eloss.hh  Fit2peaks.hh  mg25yields.cpp
source/include/: FitApeak.hh
source/src/: Eloss.cc  Fit2peaks.cc  FitApeak.cc
